@@ -535,6 +535,7 @@ following image formats are supported:
 @item ADPCM Electronic Arts R2  @tab     @tab  X
 @item ADPCM Electronic Arts R3  @tab     @tab  X
 @item ADPCM Electronic Arts XAS @tab     @tab  X
+@item ADPCM G.722            @tab     @tab  X
 @item ADPCM G.726            @tab  X  @tab  X
 @item ADPCM IMA AMV          @tab     @tab  X
     @tab Used in AMV files
